--- a/src/start.fxml
+++ b/src/start.fxml
@@ -6,10 +6,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.StartController">
    <children>
-      <Label fx:id="enterLabel" text="Select a language">
+      <Label fx:id="startLabel" text="Select a language">
          <font>
             <Font size="24.0" />
          </font>
